integration_tests/codegen_fail/fail/union/enum_same_type_pretty.stderr
warning: field is never read: `enum_path`
   --> $DIR/mod.rs:282:5
    |
282 |     pub enum_path: Option<TokenStream>,
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` on by default

warning: field is never read: `span`
   --> $DIR/mod.rs:296:5
    |
296 |     pub span: Span,
    |     ^^^^^^^^^^^^^^

warning: 2 warnings emitted

error: GraphQL union must have a different type for each union variant
 --> $DIR/enum_same_type_pretty.rs:4:1
  |
4 | / enum Character {
5 | |     A(u8),
6 | |     B(u8),
7 | | }
  | |_^
  |
  = note: https://spec.graphql.org/June2018/#sec-Unions
